--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -34,6 +34,20 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  
+  # State management
+  provider: ^6.1.2
+  
+  # UI components
+  flutter_otp_text_field: ^1.1.1
+  pin_code_fields: ^8.0.1
+  
+  # Animations
+  lottie: ^3.0.0
+  animate_do: ^3.3.4
+  
+  # Form validation
+  form_validator: ^2.1.1
 
 dev_dependencies:
   flutter_test:
